# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  frontend-changes.md  pyproject.toml
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  backend-tool-refactor.md  search_tools.py
backend/tests/: conftest.py  requirements_test.txt  test_ai_generator.py  test_api_endpoints.py  test_rag_system_integration.py  test_search_tools.py
backend/tests/fixtures/: mock_chroma_data.json  sample_courses.json
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  pre-commit-check.sh  quality-check.sh  typecheck.sh
